# alica

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  action.yml  check_clang_format.sh  dependencies.rosinstall  entrypoint.sh  format_cpp.sh  garbage.txt  package.xml  pre-commit  test
alica-essentials/agent_id/: CMakeLists.txt  package.xml
alica-essentials/agent_id/msg/: AgentID.msg
alica-essentials/agent_id/src/: AgentID.cpp  AgentIDFactory.cpp  AgentIDManager.cpp  BroadcastID.cpp  ID.cpp
alica-essentials/alica_client/: CMakeLists.txt  package.xml  plugin.xml
alica-essentials/alica_msgs/: CMakeLists.txt  package.xml
alica-essentials/alica_msgs/msg/: AlicaEngineInfo.msg  AllocationAuthorityInfo.msg  EntryPointRobots.msg  SolverVar.msg  SyncTalk.msg
alica_common_config/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt  alica_common_configConfig.cmake.in  package.xml
alica_common_config/cmake/: alica_common_configConfig.cmake  alica_common_configConfig.cmake.in  cflags.cmake
alica_customer_library/: CMakeLists.txt  package.xml
alica_customer_library/include/: AcmeBehaviour.h  AcmePlan.h  AcmeRuntimeCondition.h  Go2RandomPosition.h  GoTo.h  Move.h  TestBehaviour.h  world_model.hpp
alica_customer_library/src/: AcmeBehaviour.cpp  AcmePlan.cpp  AcmeRuntimeCondition.cpp  Go2RandomPosition.cpp  GoTo.cpp  Move.cpp  TestBehaviour.cpp  world_model.cpp
alica_dummy_proxy/: CHANGELOG.rst  CMakeLists.txt  alica_dummy_proxyConfig.cmake.in  package.xml
alica_dummy_solver/: CMakeLists.txt  package.xml
alica_dummy_solver/src/: DummyContext.cpp
alica_dynamic_loading/: CHANGELOG.rst  CMakeLists.txt  alica_dynamic_loadingConfig.cmake.in  package.xml
alica_dynamic_loading/include/: DynamicBehaviourCreator.h  DynamicConditionCreator.h  DynamicConstraintCreator.h  DynamicLoadingUtils.h  DynamicPlanCreator.h  DynamicTransitionConditionCreator.h  DynamicUtilityFunctionCreator.h
alica_dynamic_loading/src/: DynamicBehaviourCreator.cpp  DynamicConditionCreator.cpp  DynamicConstraintCreator.cpp  DynamicLoadingUtils.cpp  DynamicPlanCreator.cpp  DynamicTransitionConditionCreator.cpp  DynamicUtilityFunctionCreator.cpp
alica_engine/: CHANGELOG.rst  CMakeLists.txt  README.md  alica_engineConfig.cmake.in  package.xml
alica_engine/include/: TestBase.h
alica_engine/src/: Logging.cpp
alica_engine/src/engine/: AlicaClock.cpp  (+42 more)
alica_ros_proxy/: CMakeLists.txt  package.xml
alica_ros_proxy/msg/: AlicaEngineInfo.msg  AllocationAuthorityInfo.msg  EntryPointRobots.msg  PlanTreeInfo.msg  RobotID.msg  RoleSwitch.msg  SolverResult.msg  SolverVar.msg  SyncData.msg  SyncReady.msg  SyncTalk.msg
alica_ros_proxy/test/: test_alica_ros_proxy.cpp  test_task_assignment.cpp
alica_simple_solver/: CHANGELOG.rst  CMakeLists.txt  alica_simple_solverConfig.cmake.in  package.xml
alica_simple_solver/src/: SimpleSolver.cpp  SimpleTerm.cpp  SimpleVariable.cpp
alica_solver_interface/: CHANGELOG.rst  CMakeLists.txt  alica_solver_interfaceConfig.cmake.in  package.xml
alica_solver_interface/cmake/: cflags.cmake
alica_solver_interface/src/: SolverTerm.cpp  SolverVariable.cpp
alica_solver_interface/test/: test_intervals.cpp
alica_standard_library/: CHANGELOG.rst  CMakeLists.txt  alica_standard_libraryConfig.cmake.in  package.xml
alica_standard_library/include/: BasicPlans.h  Conditions.h  GenerateRandom.h  PopulateBlackboard.h  PopulateBlackboardFromJson.h  PopulateBlackboardFromMetadata.h
alica_standard_library/src/: BasicPlans.cpp  Conditions.cpp  GenerateRandom.cpp  PopulateBehaviourFromMetadata.cpp  PopulateBlackboard.cpp  PopulateBlackboardFromJson.cpp  PopulateBlackboardFromMetadata.cpp
alica_test/: CMakeLists.txt  package.xml
alica_test/include/: Attack.h  AttackOpp.h  ConstraintTestPlan1414068524245.h  ConstraintTestPlan1414068524245Constraint.h  ConstraintTestPlanDummySolver.h  ConstraintUsingBehaviour.h  DefendMid.h  MidFieldStandard.h  MultiAgentTestMaster1413200842973.h  MultiAgentTestPlan1413200862180.h  SimpleTestPlan1412252439925.h  SimpleTestPlan1412252439925Constraint.h  SolverType.h  Tackle.h  TestBehaviourCreator.h  TestConditionCreator.h  TestConstraintCreator.h  TestUtilityFunctionCreator.h  TestWorldModel.h  TriggerA.h  TriggerB.h  TriggerC.h
alica_test/src/: Attack.cpp  AttackOpp.cpp  ConstraintTestPlan1414068524245.cpp  ConstraintTestPlan1414068524245Constraint.cpp  ConstraintTestPlanDummySolver.cpp  ConstraintUsingBehaviour.cpp  DefendMid.cpp  MidFieldStandard.cpp  MultiAgentTestMaster1413200842973.cpp  MultiAgentTestPlan1413200862180.cpp  SimpleTestPlan1412252439925.cpp  SimpleTestPlan1412252439925Constraint.cpp  Tackle.cpp  TestBehaviourCreator.cpp  TestConditionCreator.cpp  TestConstraintCreator.cpp  TestUtilityFunctionCreator.cpp  TestWorldModel.cpp  TriggerA.cpp  TriggerB.cpp  TriggerC.cpp
alica_test/test/: alica_test.test
alica_test_support/: CMakeLists.txt  package.xml
alica_test_support/src/: AlicaTestBehaviourCreator.cpp  AlicaTestBehaviourTrigger.cpp  AlicaTestSupportUtility.cpp  TestBehaviourCreator.cpp
alica_test_utility/: CHANGELOG.rst  CMakeLists.txt  alica_test_utilityConfig.cmake.in  package.xml
alica_test_utility/src/: BehaviourTrigger.cpp  CounterClass.cpp  FailBehaviour.cpp  IMockUpBehaviour.cpp  IdleBehaviour.cpp  MockUpBehaviour.cpp  SuccessBehaviour.cpp  SuccessOrFailBehaviour.cpp  TestBehaviourCreator.cpp  TestContext.cpp  Util.cpp
alica_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
alica_tests/config/: placeholder_mapping.json  placeholder_mapping_incomplete.json  placeholder_mapping_keyname_not_matching.json  placeholder_mapping_keytype_not_matching.json
alica_tests/include/: test_alica.h
alica_tests/src/: AssignPayloadSummand.cpp  ConstraintTestPlanDummySolver.cpp  CounterClass.cpp  DistBallRobot.cpp  DistXContourTest.cpp  DummyTestSummand.cpp  SimpleSwitches.cpp  SwitchEntryPointsSummand.cpp  TestConstantValueSummand.cpp  TestTracing.cpp  TestWorldModel.cpp  test_alica.cpp
alica_tests/test/: alica_tests.test
(+8455 files in other folders)
