<?xml version="1.0"?>
<package format="2">
  <name>alica_common_config</name>
  <version>0.0.0</version>
  <description>The alica_common_config package</description>

  <maintainer email="hendrik.skubch@rapyuta-robotics.com">hendrik</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
