<?xml version="1.0"?>
<package>
  <name>alica_dummy_proxy</name>
  <version>0.0.0</version>
  <description>The alica_dummy_proxy package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="snook@todo.todo">snook</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>alica_engine</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>alica_common_config</build_depend>
  <run_depend>alica_engine</run_depend>
  <run_depend>system_config</run_depend>

</package>