<?xml version="1.0"?>
<package format="2">
  <name>alica_dummy_proxy</name>
  <version>0.0.0</version>
  <description>The alica_dummy_proxy package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="snook@todo.todo">snook</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>alica_engine</depend>
<!--  <depend>system_config</depend>-->
  <depend>alica_common_config</depend>

</package>