<?xml version="1.0"?>
<package format="2">
  <name>alica_dummy_proxy</name>
  <version>0.9.4</version>
  <description>The alica_dummy_proxy package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="snook@todo.todo">snook</maintainer>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
  <depend>alica_engine</depend>
  <depend>alica_common_config</depend>

</package>
