<?xml version="1.0"?>
<package format="2">
  <name>alica_dynamic_loading</name>
  <version>0.1.0</version>
  <description>The alica_dynamic_loading package</description>

  <maintainer email="luca.tricerri@rapyuta-robotics.com">Luca Tricerri</maintainer>

  <license>MIT</license>

  <depend>alica_common_config</depend>


<buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
