<?xml version="1.0"?>
<package>
  <name>alica_engine</name>
  <version>0.0.1</version>
  <description>The alica_engine package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>
  <maintainer email="witsch@vs.uni-kassel.de">Andreas Witsch</maintainer>

  <license>MIT</license>

  <build_depend>system_config</build_depend>
  <build_depend>fsystem</build_depend>
  <build_depend>event_handling</build_depend>
  <build_depend>system_util</build_depend>
  <build_depend>agent_id</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>system_config</run_depend>
  <run_depend>fsystem</run_depend>
  <run_depend>event_handling</run_depend>
  <run_depend>system_util</run_depend>
  <run_depend>agent_id</run_depend>

  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
