<?xml version="1.0"?>

<package format="2">
  <name>alica_engine</name>
  <version>0.0.1</version>
  <description>The alica_engine package</description>
  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>
  <maintainer email="hendrik@rapyuta-robotics.com">hendrik</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>alica_common_config</depend>
  <depend>alica_solver_interface</depend>
  
  <depend>fsystem</depend>
  <depend>event_handling</depend>
  <depend>system_util</depend>
  <depend>id_manager</depend>

  <test_depend>gtest</test_depend>
</package>
