<?xml version="1.0"?>

<package format="2">
  <name>alica_engine</name>
  <version>0.9.1</version>
  <description>The alica_engine package</description>
  <maintainer email="stephan.opfer@rapyuta-robotics.com">Stephan Opfer</maintainer>
  <maintainer email="abhishek.sharma@rapyuta-robotics.com">Abhishek Sharma</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>alica_common_config</depend>
  <depend>alica_solver_interface</depend>
  <depend>fsystem</depend>

  <test_depend>gtest</test_depend>
</package>
